Fixed Navbar to top
Fixed the navbar to the top of the screen.  Need to fix the dropdown menus broken in mobile now though

--- a/FrontRowCMS/FrontRowCMS/wwwroot/css/site.css
+++ b/FrontRowCMS/FrontRowCMS/wwwroot/css/site.css
@@ -411,24 +411,29 @@ h1, h2, h4, h6 {
 }
     */
 
+
 .container-fluid {
     margin:auto;
     padding: 0px;
 }
 
+.main_body_view{
+    margin-top: 123px;
+}
 
 .navbar {
-    min-height: 103px;
+    height: 123px;
     background-color: #ffffff;
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.27);
     margin-bottom: 0;
     border: 0;
+    width: 100%;
 }
 
 
 .navbar-brand {
     padding: 0;
-    min-height: 103px;
+    min-height: 123px;
 }
 
 .navbar-header {
@@ -437,7 +442,7 @@ h1, h2, h4, h6 {
     margin-bottom: 9px !important;
 }
 
-/* Removed from current implementation
+
 .current {
     background-color: #9ec54d !important;
     color: #FFF !important;
@@ -446,7 +451,7 @@ h1, h2, h4, h6 {
     font-family: montserrat-regular;
     border-radius: 5px 5px 0 0;
 }
-*/
+
 
 .navbar-default .navbar-nav > li > a {
     padding: 12px 28px 42px 28px;
@@ -592,6 +597,7 @@ footer {
     margin-top: 43px;
     margin-left: 552px;
     position: absolute;
+    width:auto;
 }
 
 .header-text-greeting {
